# opendrm-py

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  example_media.key  pyproject.toml
.github/workflows/: tests.yml
cert-server/: export.py  import.py  initialize.py  verify.py
examples/example_workflows/: ca_drm_example.py  encrypt_decrypt.py  issue_license.sh
examples/sample_media/: example.dec  example.txt.opdrm
scripts/: export_state.py  import_state.py  setup.sh
src/cert_server/: export_server.py  import_server.py  initialize_server.py  verify_server.py
src/drm/: cli.py
src/drm/client/: attack_scenarios.py  client_emulator.py
src/drm/encryption/: asymmetric.py  ca_keywrap.py  cipher.py  symmetric.py
src/drm/license_server/: license_schema.json
src/drm/utils/: media_io.py
src/drm/watermarking/: image_watermark.py  video_watermark.py
tests/integration/: test_attack_scenarios.py  test_ca_drm_full_workflow.py
tests/unit/: test_ca.py  test_ca_drm_integration.py  test_client.py  test_encryption.py  test_import.py  test_initialize_cert_server.py  test_integration_watermark_encrypt.py  test_license_server.py  test_media_encrypt.py  test_server_lifecycle.py  test_verify.py  test_watermarking.py
